--- a/app/src/main/res/drawable/ll1bg.xml
+++ b/app/src/main/res/drawable/ll1bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:topRightRadius="60dp"
         android:topLeftRadius="60dp"/>
-    <solid android:color="#0D4C44"/>
+    <solid android:color="#0E7267"/>
 
 
 </shape>
