--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,30 +8,30 @@
     android:background="#f2fffe"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
         <com.google.android.material.appbar.AppBarLayout
-            android:padding="10dp"
-            android:background="@color/white"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/homeToolBar"
-            android:elevation="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:elevation="5dp"
+            android:padding="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
+
                 <LinearLayout
-                    android:layout_marginRight="10dp"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
+                    android:layout_marginRight="10dp"
                     android:background="@drawable/profile_background"
                     android:gravity="center">
+
                     <TextView
                         android:id="@+id/user_initials"
                         android:layout_width="wrap_content"
@@ -41,12 +42,12 @@
 
                 <TextView
                     android:id="@+id/user_name"
-                    android:layout_marginRight="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
                     android:text="Sagar"
                     android:textColor="@color/black"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <ImageButton
                     android:id="@+id/add_button"
@@ -58,187 +59,51 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1"/>
+                    android:layout_weight="1" />
 
                 <ImageButton
                     android:id="@+id/wallet_button"
-                    android:layout_marginRight="20dp"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
+                    android:layout_marginRight="20dp"
                     android:background="@drawable/profile_background"
-                    android:src="@drawable/ic_baseline_account_balance_wallet_24"/>
+                    android:src="@drawable/ic_baseline_account_balance_wallet_24" />
 
                 <ImageButton
                     android:id="@+id/phone_button"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:background="@android:color/transparent"
-                    android:src="@drawable/ic_baseline_phone_24"/>
+                    android:src="@drawable/ic_baseline_phone_24" />
 
             </LinearLayout>
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/homeToolBar">
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/homeToolBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <androidx.cardview.widget.CardView
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginVertical="4dp"
-                        app:cardBackgroundColor="@color/white"
-                        android:layout_width="160dp"
-                        android:elevation="4dp"
-                        app:cardElevation="4dp"
-                        app:cardCornerRadius="10dp"
-                        android:layout_height="100dp">
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="top|center"
-                            android:orientation="horizontal">
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginRight="2dp"
-                                android:src="@drawable/ic_blood_bag_icon"/>
-                            <TextView
-                                android:layout_marginTop="4dp"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Blood Pressure"
-                                android:textStyle="bold"
-                                android:textColor="@color/black"/>
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:gravity="center"
-                            android:orientation="vertical">
-                            <TextView
-                                android:id="@+id/user_blood_pressure"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="--/--"
-                                android:textColor="@color/teal_700"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="(mmHg)"
-                                android:textColor="@color/teal_700"/>
-                        </LinearLayout>
-                        <ImageButton
-                            android:id="@+id/blood_pressure_add_button"
-                            android:layout_marginBottom="6dp"
-                            android:layout_marginRight="6dp"
-                            android:layout_width="36dp"
-                            android:layout_height="36dp"
-                            android:background="@drawable/profile_background"
-                            android:src="@drawable/ic_baseline_add_24"
-                            android:layout_gravity="bottom|end"/>
-                    </androidx.cardview.widget.CardView>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"/>
-                    <androidx.cardview.widget.CardView
-                        android:layout_marginRight="10dp"
-                        android:layout_marginVertical="4dp"
-                        app:cardBackgroundColor="@color/white"
-                        android:layout_width="160dp"
-                        android:elevation="4dp"
-                        app:cardElevation="4dp"
-                        app:cardCornerRadius="10dp"
-                        android:layout_height="100dp">
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="top|center"
-                            android:orientation="horizontal">
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginRight="2dp"
-                            android:src="@drawable/ic_weight_icon"/>
-                        <TextView
-                            android:layout_marginTop="4dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Weight"
-                            android:textStyle="bold"
-                            android:layout_gravity="top|center"
-                            android:textColor="@color/black"/>
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:gravity="center"
-                            android:orientation="vertical">
-                            <TextView
-                                android:id="@+id/user_weight"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="44"
-                                android:textColor="@color/teal_700"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="(kg)"
-                                android:textColor="@color/teal_700"/>
-                        </LinearLayout>
-                        <ImageButton
-                            android:id="@+id/weight_add_button"
-                            android:layout_marginBottom="6dp"
-                            android:layout_marginRight="6dp"
-                            android:layout_width="36dp"
-                            android:layout_height="36dp"
-                            android:background="@drawable/profile_background"
-                            android:src="@drawable/ic_baseline_add_24"
-                            android:layout_gravity="bottom|end"/>
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <ImageView
-                        android:layout_marginHorizontal="10dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:background="@drawable/banner_background"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/banner_image"/>
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/order_now_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/button_background"
-                        android:text="ORDER NOW"
-                        android:minHeight="0dp"
-                        android:layout_gravity="bottom|end"
-                        android:layout_marginRight="60dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginTop="2dp"
-                        android:paddingVertical="4dp"
-                        android:paddingHorizontal="20dp"/>
-                </FrameLayout>
-
-            </LinearLayout>
-
-        </ScrollView>
-
-    </LinearLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        app:itemIconTint="@color/black"
+        app:labelVisibilityMode="labeled"
+        app:itemTextColor="@color/black"
+        app:itemRippleColor="@android:color/transparent"
+        android:id="@+id/bottomNavigationView"
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        app:itemBackground="@drawable/nabar_item_bg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/white"
+        app:menu="@menu/bottom_nav_menu"
+        android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
