--- a/app/src/main/res/layout/main_home_widget.xml
+++ b/app/src/main/res/layout/main_home_widget.xml
@@ -7,15 +7,15 @@
     <LinearLayout
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="4dp"
-            android:paddingRight="100dp"
+            android:paddingRight="80dp"
 
             android:background="@drawable/ll1bg">
             <TextView
@@ -27,6 +27,183 @@
                 android:textSize="16sp"
                 android:layout_marginLeft="20dp"/>
         </LinearLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:background="@drawable/ic_background_main"
+            android:layout_height="260dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Learn how to take a sugar reading"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:layout_marginTop="20dp"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="26dp"
+                    android:orientation="horizontal">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Watch Video"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"
+                        android:letterSpacing="0.08"/>
+                    <ImageButton
+                        android:id="@+id/play_button"
+                        android:layout_marginLeft="1dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/ic_baseline_play_arrow_24"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+                    <FrameLayout
+                        android:layout_weight="1"
+                        android:layout_marginVertical="2dp"
+                        android:id="@+id/how_to_use_frame1"
+                        android:layout_width="80dp"
+                        android:layout_height="100dp"
+                        android:background="@drawable/how_to_use_background">
+
+                        <ImageButton
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginHorizontal="10dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginBottom="25dp"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/ic_htu1"
+                            android:background="@android:color/transparent"
+                            android:layout_gravity="center"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="HOW TO USE"
+                            android:layout_marginBottom="5dp"
+                            android:textColor="@color/white"
+                            android:textSize="10sp"
+                            android:layout_gravity="bottom|center"/>
+                    </FrameLayout>
+                    <FrameLayout
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginVertical="2dp"
+                        android:id="@+id/how_to_use_frame2"
+                        android:layout_width="80dp"
+                        android:layout_height="100dp"
+                        android:background="@drawable/how_to_use_background">
+
+                        <ImageButton
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginHorizontal="10dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginBottom="25dp"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/ic_htu2"
+                            android:background="@android:color/transparent"
+                            android:layout_gravity="center"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="HOW TO USE"
+                            android:layout_marginBottom="5dp"
+                            android:textColor="@color/white"
+                            android:textSize="10sp"
+                            android:layout_gravity="bottom|center"/>
+                    </FrameLayout>
+                    <FrameLayout
+                        android:layout_weight="1"
+                        android:layout_marginVertical="2dp"
+                        android:id="@+id/how_to_use_frame3"
+                        android:layout_width="80dp"
+                        android:layout_height="100dp"
+                        android:background="@drawable/how_to_use_background">
+
+                        <ImageButton
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginHorizontal="10dp"
+                            android:layout_marginTop="20dp"
+                            android:layout_marginBottom="25dp"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/ic_htu1"
+                            android:background="@android:color/transparent"
+                            android:layout_gravity="center"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="MANUAL READING"
+                            android:layout_marginBottom="5dp"
+                            android:textColor="@color/white"
+                            android:textSize="10sp"
+                            android:layout_gravity="bottom|center"/>
+                    </FrameLayout>
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_gravity="center|bottom"
+                android:layout_marginBottom="4dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TAKE FIRST READING"
+                    android:textColor="#0B4159"
+                    android:textSize="12sp"
+                    android:layout_marginRight="10dp"
+                    android:textStyle="bold"/>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/first_reading_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:cardBackgroundColor="#0B4159"
+                    app:cardCornerRadius="100dp">
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:gravity="center_vertical"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <ImageView
+                            android:layout_marginLeft="5dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_coin_icon"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:textSize="12sp"
+                            android:layout_height="wrap_content"
+                            android:text="Earn Rs 50 Cashback"
+                            android:textColor="@color/white"
+                            android:layout_margin="5dp"/>
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
+
+        </FrameLayout>
+
     </LinearLayout>
 
 
