--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,4 +26,14 @@
         <item name="cornerSizeBottomRight">4dp</item>
         <item name="cornerSizeBottomLeft">4dp</item>
     </style>
+
+    <style name="CustomNavigationStyle"
+        parent="Widget.Design.BottomNavigationView">
+        <item name="indicatorColor">@android:color/holo_red_light</item>
+        <item name="indicatorSize">30dp</item>
+        <item name="tabIndicatorColor">@android:color/holo_red_light</item>
+        <item name="tabSelectedTextColor">@color/black</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
 </resources>
